--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@types/moment": "^2.13.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "firebase": "^4.2.0",
-    "font-awesome": "^4.7.0",    
-    "moment": "^2.18.1",    
+    "font-awesome": "^4.7.0",
+    "moment": "^2.18.1",
     "rxjs": "^5.4.1",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.14"
