--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7"
+    "firebase-functions": "^0.5.7",
+    "nodemailer": "^4.1.0"
   },
   "private": true
 }
