--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.4",
     "firebase-admin": "~4.2.1",
     "firebase-functions": "^0.5.7",
+    "moment": "^2.18.1",
     "nodemailer": "^4.1.0"
   },
   "private": true
