--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
+    "roboto-fontface": "^0.8.0",
     "rxjs": "^5.4.1",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.14"
