--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/moment": "^2.13.0",
+    "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "firebase": "^4.3.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "roboto-fontface": "^0.8.0",
