--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "es5-shim": "^4.5.9",
+    "es6-shim": "^0.35.3",
     "firebase": "^4.3.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
